food/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food
  namespace: food
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: food
          image: matthew10125/food-website:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
