food/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: food
  namespace: food
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
